--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@discordjs/voice": "0.17.0",
     "discord.js": "14.16.3",
     "dotenv": "16.4.5",
+    "express": "^4.21.0",
     "libsodium-wrappers": "0.7.13",
     "zod": "3.23.8"
   },
   "devDependencies": {
     "@tsconfig/node20": "20.1.4",
+    "@types/express": "5.0.0",
     "@types/node": "22.7.4",
     "prettier": "3.3.3",
     "tsup": "8.3.0",
